manifests/environments/base/base.yaml
apiVersion: v1
kind: Service
metadata:
  name: cd
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: cd
---
apiVersion: v1
kind: Service
metadata:
  name: cm
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: cm
---
apiVersion: v1
kind: Service
metadata:
  name: id
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: id
---
apiVersion: v1
kind: Service
metadata:
  name: mssql
spec:
  ports:
  - port: 1433
    protocol: TCP
  selector:
    app: mssql
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
  - port: 6379
    protocol: TCP
  selector:
    app: redis
---
apiVersion: v1
kind: Service
metadata:
  name: solr
spec:
  ports:
  - port: 8983
    protocol: TCP
  selector:
    app: solr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cd
  name: cd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cd
  template:
    metadata:
      labels:
        app: cd
    spec:
      containers:
      - env:
        - name: Sitecore_InstanceName
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: Database_Server
          valueFrom:
            secretKeyRef:
              key: sitecore-databaseservername.txt
              name: sitecore-database
        - name: Core_Database_Username
          valueFrom:
            secretKeyRef:
              key: sitecore-core-database-username.txt
              name: sitecore-database
        - name: Core_Database_Password
          valueFrom:
            secretKeyRef:
              key: sitecore-core-database-password.txt
              name: sitecore-database
        - name: Web_Database_Username
          valueFrom:
            secretKeyRef:
              key: sitecore-web-database-username.txt
              name: sitecore-database
        - name: Web_Database_Password
          valueFrom:
            secretKeyRef:
              key: sitecore-web-database-password.txt
              name: sitecore-database
        - name: Forms_Database_Username
          valueFrom:
            secretKeyRef:
              key: sitecore-forms-database-username.txt
              name: sitecore-database
        - name: Forms_Database_Password
          valueFrom:
            secretKeyRef:
              key: sitecore-forms-database-password.txt
              name: sitecore-database
        - name: Sitecore_License
          valueFrom:
            secretKeyRef:
              key: sitecore-license.txt
              name: sitecore-license
        - name: Sitecore_ConnectionStrings_Security
          value: Data Source=$(Database_Server);Initial Catalog=Sitecore.Core;User
            ID=$(Core_Database_Username);Password=$(Core_Database_Password);
        - name: Sitecore_ConnectionStrings_Web
          value: Data Source=$(Database_Server);Initial Catalog=Sitecore.Web;User
            ID=$(Web_Database_Username);Password=$(Web_Database_Password);
        - name: Sitecore_ConnectionStrings_ExperienceForms
          value: Data Source=$(Database_Server);Initial Catalog=Sitecore.ExperienceForms;User
            ID=$(Forms_Database_Username);Password=$(Forms_Database_Password);
        - name: Sitecore_ConnectionStrings_Solr.Search
          valueFrom:
            secretKeyRef:
              key: sitecore-solr-connection-string.txt
              name: sitecore-solr
        - name: Sitecore_ConnectionStrings_Redis.Sessions
          value: redis:6379,ssl=False,abortConnect=False
        - name: SOLR_CORE_PREFIX_NAME
          valueFrom:
            secretKeyRef:
              key: sitecore-solr-core-prefix-name.txt
              name: sitecore-solr
        - name: MEDIA_REQUEST_PROTECTION_SHARED_SECRET
          valueFrom:
            secretKeyRef:
              key: sitecore-media-request-protection-shared-secret.txt
              name: sitecore-protect-media-requests
        image: ghcr.io/eng-valtech/valtechhelix-xm1-cd:0.0.1
        livenessProbe:
          failureThreshold: 3
          httpGet:
            httpHeaders:
            - name: X-Kubernetes-Probe
              value: Liveness
            path: /healthz/live
            port: 80
          periodSeconds: 30
          timeoutSeconds: 300
        name: sitecore-xm1-cd
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 2000m
            memory: 3Gi
          requests:
            cpu: 1000m
            memory: 1Gi
        startupProbe:
          failureThreshold: 10
          httpGet:
            httpHeaders:
            - name: X-Kubernetes-Probe
              value: Startup
            path: /healthz/ready
            port: 80
          periodSeconds: 30
          timeoutSeconds: 300
        volumeMounts:
        - mountPath: C:\inetpub\wwwroot\App_Data\Submit Queue
          name: submit-queue
      imagePullSecrets:
      - name: sitecore-docker-registry
      nodeSelector:
        kubernetes.io/os: windows
      volumes:
      - name: submit-queue
        persistentVolumeClaim:
          claimName: submit-queue
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cm
  name: cm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cm
  template:
    metadata:
      labels:
        app: cm
    spec:
      containers:
      - env:
        - name: Sitecore_InstanceName
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: Database_Server
          valueFrom:
            secretKeyRef:
              key: sitecore-databaseservername.txt
              name: sitecore-database
        - name: Master_Database_Username
          valueFrom:
            secretKeyRef:
              key: sitecore-master-database-username.txt
              name: sitecore-database
        - name: Master_Database_Password
          valueFrom:
            secretKeyRef:
              key: sitecore-master-database-password.txt
              name: sitecore-database
        - name: Core_Database_Username
          valueFrom:
            secretKeyRef:
              key: sitecore-core-database-username.txt
              name: sitecore-database
        - name: Core_Database_Password
          valueFrom:
            secretKeyRef:
              key: sitecore-core-database-password.txt
              name: sitecore-database
        - name: Web_Database_Username
          valueFrom:
            secretKeyRef:
              key: sitecore-web-database-username.txt
              name: sitecore-database
        - name: Web_Database_Password
          valueFrom:
            secretKeyRef:
              key: sitecore-web-database-password.txt
              name: sitecore-database
        - name: Forms_Database_Username
          valueFrom:
            secretKeyRef:
              key: sitecore-forms-database-username.txt
              name: sitecore-database
        - name: Forms_Database_Password
          valueFrom:
            secretKeyRef:
              key: sitecore-forms-database-password.txt
              name: sitecore-database
        - name: Sitecore_ConnectionStrings_Sitecoreidentity.secret
          valueFrom:
            secretKeyRef:
              key: sitecore-identitysecret.txt
              name: sitecore-identity
        - name: Sitecore_AppSettings_Telerik.AsyncUpload.ConfigurationEncryptionKey
          valueFrom:
            secretKeyRef:
              key: sitecore-telerikencryptionkey.txt
              name: sitecore-telerik
        - name: Sitecore_AppSettings_Telerik.Upload.ConfigurationHashKey
          valueFrom:
            secretKeyRef:
              key: sitecore-telerikencryptionkey.txt
              name: sitecore-telerik
        - name: Sitecore_AppSettings_Telerik.Web.UI.DialogParametersEncryptionKey
          valueFrom:
            secretKeyRef:
              key: sitecore-telerikencryptionkey.txt
              name: sitecore-telerik
        - name: Sitecore_License
          valueFrom:
            secretKeyRef:
              key: sitecore-license.txt
              name: sitecore-license
        - name: Sitecore_ConnectionStrings_Core
          value: Data Source=$(Database_Server);Initial Catalog=Sitecore.Core;User
            ID=$(Core_Database_Username);Password=$(Core_Database_Password);
        - name: Sitecore_ConnectionStrings_Security
          value: Data Source=$(Database_Server);Initial Catalog=Sitecore.Core;User
            ID=$(Core_Database_Username);Password=$(Core_Database_Password);
        - name: Sitecore_ConnectionStrings_Master
          value: Data Source=$(Database_Server);Initial Catalog=Sitecore.Master;User
            ID=$(Master_Database_Username);Password=$(Master_Database_Password);
        - name: Sitecore_ConnectionStrings_Web
          value: Data Source=$(Database_Server);Initial Catalog=Sitecore.Web;User
            ID=$(Web_Database_Username);Password=$(Web_Database_Password);
        - name: Sitecore_ConnectionStrings_ExperienceForms
          value: Data Source=$(Database_Server);Initial Catalog=Sitecore.ExperienceForms;User
            ID=$(Forms_Database_Username);Password=$(Forms_Database_Password);
        - name: Sitecore_ConnectionStrings_Solr.Search
          valueFrom:
            secretKeyRef:
              key: sitecore-solr-connection-string.txt
              name: sitecore-solr
        - name: Sitecore_Processing_Service_Require_Https
          value: "false"
        - name: SITECORE_HOSTNAME_CM
          valueFrom:
            configMapKeyRef:
              key: SITECORE_HOSTNAME_CM
              name: environment-config-map
        - name: SITECORE_HOSTNAME_ID
          valueFrom:
            configMapKeyRef:
              key: SITECORE_HOSTNAME_ID
              name: environment-config-map
        - name: Sitecore_Identity_Server_Authority
          value: https://$(SITECORE_HOSTNAME_ID)
        - name: Sitecore_Identity_Server_CallbackAuthority
          value: https://$(SITECORE_HOSTNAME_CM)
        - name: Sitecore_Identity_Server_InternalAuthority
          value: http://id
        - name: Sitecore_Identity_Server_Require_Https
          value: "false"
        - name: SOLR_CORE_PREFIX_NAME
          valueFrom:
            secretKeyRef:
              key: sitecore-solr-core-prefix-name.txt
              name: sitecore-solr
        - name: MEDIA_REQUEST_PROTECTION_SHARED_SECRET
          valueFrom:
            secretKeyRef:
              key: sitecore-media-request-protection-shared-secret.txt
              name: sitecore-protect-media-requests
        image: ghcr.io/eng-valtech/valtechhelix-xm1-cm:0.0.1
        livenessProbe:
          failureThreshold: 3
          httpGet:
            httpHeaders:
            - name: X-Kubernetes-Probe
              value: Liveness
            path: /healthz/live
            port: 80
          periodSeconds: 30
          timeoutSeconds: 300
        name: sitecore-xm1-cm
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 2000m
            memory: 3Gi
          requests:
            cpu: 1000m
            memory: 800Mi
        startupProbe:
          failureThreshold: 10
          httpGet:
            httpHeaders:
            - name: X-Kubernetes-Probe
              value: Startup
            path: /healthz/ready
            port: 80
          periodSeconds: 30
          timeoutSeconds: 300
      imagePullSecrets:
      - name: sitecore-docker-registry
      nodeSelector:
        kubernetes.io/os: windows
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: id
  name: id
spec:
  replicas: 1
  selector:
    matchLabels:
      app: id
  template:
    metadata:
      labels:
        app: id
    spec:
      containers:
      - env:
        - name: Database_Server
          valueFrom:
            secretKeyRef:
              key: sitecore-databaseservername.txt
              name: sitecore-database
        - name: Core_Database_Username
          valueFrom:
            secretKeyRef:
              key: sitecore-core-database-username.txt
              name: sitecore-database
        - name: Core_Database_Password
          valueFrom:
            secretKeyRef:
              key: sitecore-core-database-password.txt
              name: sitecore-database
        - name: Sitecore_Sitecore__IdentityServer__Clients__PasswordClient__ClientSecrets__ClientSecret1
          valueFrom:
            secretKeyRef:
              key: sitecore-identitysecret.txt
              name: sitecore-identity
        - name: Sitecore_Sitecore__IdentityServer__CertificateRawData
          valueFrom:
            secretKeyRef:
              key: sitecore-identitycertificate.txt
              name: sitecore-identitycertificate
        - name: Sitecore_Sitecore__IdentityServer__CertificateRawDataPassword
          valueFrom:
            secretKeyRef:
              key: sitecore-identitycertificatepassword.txt
              name: sitecore-identitycertificate
        - name: Sitecore_License
          valueFrom:
            secretKeyRef:
              key: sitecore-license.txt
              name: sitecore-license
        - name: Sitecore_Sitecore__IdentityServer__SitecoreMemberShipOptions__ConnectionString
          value: Data Source=$(Database_Server);Initial Catalog=Sitecore.Core;User
            ID=$(Core_Database_Username);Password=$(Core_Database_Password);
        - name: SITECORE_HOSTNAME_CM
          valueFrom:
            configMapKeyRef:
              key: SITECORE_HOSTNAME_CM
              name: environment-config-map
        - name: SITECORE_HOSTNAME_ID
          valueFrom:
            configMapKeyRef:
              key: SITECORE_HOSTNAME_ID
              name: environment-config-map
        - name: Sitecore_Sitecore__IdentityServer__AccountOptions__PasswordRecoveryUrl
          value: https://$(SITECORE_HOSTNAME_CM)/sitecore/login?rc=1
        - name: Sitecore_Sitecore__IdentityServer__Clients__DefaultClient__AllowedCorsOrigins__AllowedCorsOriginsGroup1
          value: https://$(SITECORE_HOSTNAME_CM)
        - name: Sitecore_Sitecore__IdentityServer__PublicOrigin
          value: https://$(SITECORE_HOSTNAME_ID)
        image: ghcr.io/eng-valtech/valtechhelix-id:0.0.1
        livenessProbe:
          failureThreshold: 3
          httpGet:
            httpHeaders:
            - name: X-Kubernetes-Probe
              value: Liveness
            path: /healthz/live
            port: 80
          periodSeconds: 30
          timeoutSeconds: 300
        name: sitecore-id
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 200m
            memory: 1Gi
          requests:
            cpu: 50m
            memory: 400Mi
        startupProbe:
          failureThreshold: 10
          httpGet:
            httpHeaders:
            - name: X-Kubernetes-Probe
              value: Startup
            path: /healthz/ready
            port: 80
          periodSeconds: 30
          timeoutSeconds: 300
      imagePullSecrets:
      - name: sitecore-docker-registry
      nodeSelector:
        kubernetes.io/os: windows
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mssql
  name: mssql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
      - env:
        - name: SQL_SERVER
          valueFrom:
            secretKeyRef:
              key: sitecore-databaseservername.txt
              name: sitecore-database
        - name: SA_PASSWORD
          valueFrom:
            secretKeyRef:
              key: sitecore-databasepassword.txt
              name: sitecore-database
        - name: ACCEPT_EULA
          value: "Y"
        - name: SITECORE_ADMIN_PASSWORD
          valueFrom:
            secretKeyRef:
              key: sitecore-adminpassword.txt
              name: sitecore-admin
        image: ghcr.io/eng-valtech/valtechhelix-mssql-developer:0.0.1
        name: mssql
        ports:
        - containerPort: 1433
        resources:
          limits:
            cpu: "4"
            memory: 6Gi
          requests:
            cpu: "2"
            memory: 4Gi
        volumeMounts:
        - mountPath: C:\data
          name: data
      imagePullSecrets:
      - name: sitecore-docker-registry
      nodeSelector:
        kubernetes.io/os: windows
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: sql-data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - image: ghcr.io/eng-valtech/valtechhelix-redis:0.0.1
        name: sitecore-redis
        ports:
        - containerPort: 6379
        resources:
          limits:
            cpu: 500m
            memory: 2500Mi
          requests:
            cpu: 100m
            memory: 100Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
        volumeMounts:
        - mountPath: /data
          name: data
      nodeSelector:
        kubernetes.io/os: linux
      volumes:
      - emptyDir: {}
        name: data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secrets-synchronizer
spec:
  selector:
    matchLabels:
      app: secrets-synchronizer
  template:
    metadata:
      labels:
        app: secrets-synchronizer
    spec:
      containers:
      - args:
        - infinity
        command:
        - sleep
        image: docker.io/library/alpine:3.12.1
        name: secrets-synchronizer
        resources:
          limits:
            cpu: 50m
            memory: 100Mi
          requests:
            cpu: 10m
            memory: 20Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
        volumeMounts:
        - mountPath: /mnt/secrets-store
          name: secrets-store-inline
          readOnly: true
      nodeSelector:
        kubernetes.io/os: linux
      volumes:
      - csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: sitecore-secrets
        name: secrets-store-inline
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: solr
  name: solr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: solr
    spec:
      containers:
      - env:
        - name: SOLR_MODE
          value: solrcloud
        image: scr.sitecore.com/sxp/nonproduction/solr:8.11.2-ltsc2019
        livenessProbe:
          httpGet:
            path: /solr/admin/info/system
            port: 8983
          initialDelaySeconds: 45
          periodSeconds: 10
        name: solr
        ports:
        - containerPort: 8983
        readinessProbe:
          httpGet:
            path: /solr/admin/info/system
            port: 8983
          initialDelaySeconds: 15
          periodSeconds: 5
        resources:
          limits:
            cpu: "2"
            memory: 2Gi
          requests:
            cpu: "1"
            memory: 1Gi
        volumeMounts:
        - mountPath: C:\data
          name: data
      imagePullSecrets:
      - name: sitecore-docker-registry
      nodeSelector:
        kubernetes.io/os: windows
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: solr-data
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/proxy-buffer-size: 32k
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 120s
    nginx.ingress.kubernetes.io/proxy-read-timeout: 120s
    nginx.ingress.kubernetes.io/proxy-send-timeout: 120s
  name: cd-ingress
spec:
  rules:
  - host: cd.sitecore
    http:
      paths:
      - backend:
          service:
            name: cd
            port:
              number: 80
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 256m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 32k
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 120s
    nginx.ingress.kubernetes.io/proxy-read-timeout: 120s
    nginx.ingress.kubernetes.io/proxy-send-timeout: 120s
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: cm-ingress
spec:
  rules:
  - host: cm.sitecore
    http:
      paths:
      - backend:
          service:
            name: cm
            port:
              number: 80
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-buffer-size: 32k
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: id-ingress
spec:
  rules:
  - host: id.sitecore
    http:
      paths:
      - backend:
          service:
            name: id
            port:
              number: 80
        path: /
        pathType: Prefix
